mengubah foto pada halaman index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- End Navbar -->
     <!-- Jumpotron -->
     <section class="jumbotron text-center">
-      <img src="img/okra.jpg" alt="Okrafaldino" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/Non-Formal.jpg" alt="Okrafaldino" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Okrafaldino</h1>
       <p class="lead">Student | Web Developer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
